Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75737

kernel/qmetatype_p.h : clang warning about using constant operand in logical operation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.14.0 Alpha
    • 5.13.0 Beta3
    • Core: Other
    • None
    • daaa55725969aed87665c366d7cc96304c4e5f4c (qt/qtbase/dev)

    Description

      qtbase/src/corelib/kernel/qmetatype_p.h: line 97

      #define QT_ASSIGN_TYPE_TO_MODULE(TYPE, MODULE) \
      template<> \
      class QTypeModuleInfo<TYPE > \
      { \
      public: \
          enum Module { \
              IsCore = (((MODULE) == (QModulesPrivate::Core))), \
              IsWidget = (((MODULE) == (QModulesPrivate::Widgets))), \
              IsGui = (((MODULE) == (QModulesPrivate::Gui))), \
              IsUnknown = !(IsCore || IsWidget || IsGui) \
          }; \
          static inline int module() { return MODULE; } \
          Q_STATIC_ASSERT((IsUnknown && !(IsCore || IsWidget || IsGui)) \
                       || (IsCore && !(IsUnknown || IsWidget || IsGui)) \
                       || (IsWidget && !(IsUnknown || IsCore || IsGui)) \
                       || (IsGui && !(IsUnknown || IsCore || IsWidget))); \
      };
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            yulong.bai Bai Yulong
            yulong.bai Bai Yulong
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes