src/corelib/kernel/qmetatype_p.h
@@ -87,7 +87,7 @@ template<> \
 class QTypeModuleInfo<TYPE > \
 { \
 public: \
-    enum Module { \
+    enum Module : bool { \
         IsCore = (((MODULE) == (QModulesPrivate::Core))), \
         IsWidget = (((MODULE) == (QModulesPrivate::Widgets))), \
         IsGui = (((MODULE) == (QModulesPrivate::Gui))), \
